site/style.css
/*


*/

/*********** CSS RESET *************/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;

  font-family: 'Roboto', Helvetica, Arial, sans-serif;
}
  /* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*********** SET CORE STYLES **************/

html, body {
    --linkColor: #ffe17e;
}

h1, h2, h3 ,h4 ,h5, h6, p {
  display: block;
}

p {
  font-size: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  line-height: 1.25;
}

h1 {
  font-size: 2.7em;
  margin-top: 1.2em;
  margin-bottom: 1.2em;
  margin-left: 0;
  margin-right: 0;
  font-weight: bold;
}

h2 {
  font-size: 1.5em;
  margin-top: 0.83em;
  margin-bottom: 0.83em;
  margin-left: 0;
  margin-right: 0;
  font-weight: bold;
}

h3 {
  font-size: 1.17em;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  font-weight: bold;
}

h4 {
  font-size: 1em;
  margin-top: 1.33em;
  margin-bottom: 1.33em;
  margin-left: 0;
  margin-right: 0;
  font-weight: bold;
}

h5 {
  font-size: .83em;
  margin-top: 1.67em;
  margin-bottom: 1.67em;
  margin-left: 0;
  margin-right: 0;
  font-weight: bold;
}

h6 {
 font-size: .67em;
 margin-top: 2.33em;
 margin-bottom: 2.33em;
 margin-left: 0;
 margin-right: 0;
 font-weight: bold;
}

a {
  background:
     linear-gradient(
       to bottom, var(--linkColor) 0%,
       var(--linkColor) 100%
     );
    background-position: 0 100%;
    background-repeat: repeat-x;
    background-size: 4px 2px;
  color: #000;
  text-decoration: none;
  transition: background-size .5s;
}


a:hover {
  background-size: 4px 50px;
}

a.clear-style {
  background: none;
}

a.clear-style:hover {
  background-size: 0;
}

.wrapper {
  margin: 0 auto;
}

.wrapper.services {
  display: grid;
  grid-template-areas:
    "nav"
    "content"
    "footer";
}

.wrapper.homepage {
  display: grid;
  grid-template-areas:
    "nav"
    "header"
    "footer";
}

.content {
  grid-area: content;
  height: 100%;
  margin: 2em;
}

.wrapper.page-content {
  width: 80%;
  max-width: 1200px;
  margin-top: 1em;
}


/***** CUSTOM SELECT BOX STYLING ******/


/***** END CUSTOM SELECT BOX STYLING ******/

.wrapper.offering {
  display: grid;
  margin-bottom: 10em;

  grid-template-columns: 1fr 7em 1fr;
  grid-template-rows: auto 5em auto;
  grid-template-areas:
  "intro intro intro"
  ". . ."
  "english . french";
}

.wrapper.offering > div.page-intro {
  grid-area: intro;
}

.wrapper.offering > .button {
  margin-bottom: 2em;
}

#eng {
  grid-area: english;
}

#fr {
  grid-area: french;
}

.category-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-top: 3em;
  margin-bottom: 4em;
}

.seek-category, .bio-snippet {
  width: 47.5%;
  min-width: 380px;
  margin-bottom: 0.7em;
}

.category-description {
  border: 1px solid grey;
  padding: 1em;
  background-color: #fff;
  -webkit-transition: background-color .2s ease-in;
  transition: background-color .2s ease-in;
}

.category-description:hover, .category-description:focus {
  background-color: var(--linkColor);
}

.fa-arrow-right {
  color: #f2c944;
  font-size: 1.2em;
}

.fa-plus-square {
  color: lightgrey;
  font-size: 1.5em;
}

.category-description > h3 {
  font-weight: normal;
  margin-top: 0;
}

.category-description > p {
  margin-bottom: 0;
}

h5.search-category {
  font-weight: normal;
  text-align: right;
  padding-right: 3em;
  margin-top: 1em;
  margin-bottom: 2em;
  -webkit-transition: padding-right .2s ease-in;
  transition: padding-right .2s ease-in;
}

h5.search-category > i, h6.view-profile > i {
  padding-left: 0.3em;
}

.seek-category > a {
  text-decoration: none;
  color: black;
}

h5.search-category:hover, h5.search-category:focus {
  padding-right: 2.7em;
}

h5.search-category:active {
  padding-right: 2em;
}

h1.page-title {
  font-size: 2.7em;
}

/*********** Professional Filter ***********/

.filter {
  display: inline-block;
  padding: 0;
  margin: 0.8em 0 1em 0;
}

.bio-snippet {
  padding: 0;
  background-color: #fff;
  margin-bottom: 3em;
  border: 1px solid #f2f0f0;

  display: grid;
  grid-template-columns: 150px auto auto;
  grid-template-rows: auto auto 2.5em;
  grid-column-gap: 15px;
  grid-template-areas:
  "thumbnail name name"
  "thumbnail details details"
  "thumbnail icons profile";
}

.bio-thumbnail {
  grid-area: thumbnail;
  width: 150px;
  height: auto;
  margin: 0;
}

.bio-name {
  grid-area: name;
  font-weight: normal;
  font-size: 2em;
  margin: 0;
  padding-top: 0.5em;
}

div.snippet-details {
  grid-area: details;
  color: #7f7f7f;
}

p.snippet-details {
  margin: 0;
  font-size: 12px;
}

.bio-icons {
  grid-area: icons;
  padding-top: 0.4em;
}

div.view-profile {
  grid-area: profile;
  align-content: right;
  text-align: right;
  padding-top: 0.7em;
  letter-spacing: 0.05em;
}

div.view-profile > a {
  padding-right: 1.7em;
  -webkit-transition: padding-right .2s ease-in;
  transition: padding-right .2s ease-in;
  padding-bottom: 0.5em;
}
/* ... */

